# haskell-dojo

./: .gitpod.Dockerfile  .gitpod.yml  .hlint.yaml  README.md  haskell-dojo.cabal  sbox
Testing/: D2.hs  D3.hs  D4.hs
app/: Main.hs
assets/: dict.txt  dojo-logo.txt  ttt-logo.txt
assignments/: A1.md  A2.md  A3.md  A4.md  A5.md  A6.md  A7.md  A8.md
assignments/A1/: A1-1.md  A1-2.md  A1-3.md
assignments/A2/: A2-1.md  A2-2.md
assignments/A3/: A3-1.md  A3-2.md
assignments/A4/: A4-1.md  A4-2.md
assignments/A5/: A5-1.md  A5-2.md
assignments/A6/: A6-0.md  A6-1.md  A6-2.md
assignments/A7/: A7.md
assignments/A8/: A8.md
src/: Sandbox.hs
src/HM/: A6.hs  A7.hs  A8.hs  Provided.hs
src/TTT/: A1.hs  A2.hs  A3.hs  A4.hs  A5.hs
